UHF-1550: Refactored secondary content field.

--- a/src/scss/components/content/_unit.scss
+++ b/src/scss/components/content/_unit.scss
@@ -63,10 +63,12 @@
       }
 
       .unit__sidebar {
+        margin-top: $spacing-double;
         order: 1;
         padding-left: 0;
 
         @include breakpoint($breakpoint-l) {
+          margin-top: 0;
           padding-right: $spacing-double;
         }
 
@@ -87,7 +89,10 @@
       }
     }
     .unit__sidebar {
+      margin-top: $spacing-double;
+
       @include breakpoint($breakpoint-l) {
+        margin-top: 0;
         padding-left: $spacing-double;
         width: 30%;
       }
