--- a/templates/block/block--lower-content-block.html.twig
+++ b/templates/block/block--lower-content-block.html.twig
@@ -25,7 +25,7 @@
  * @see template_preprocess_block()
  */
 #}
-<div{{ attributes.addClass('secondary-content') }}>
+<div{{ attributes.addClass('lower-content') }}>
   {{ title_prefix }}
   {% if label %}
     <h2{{ title_attributes }}>{{ label }}</h2>
