--- a/templates/content/node.html.twig
+++ b/templates/content/node.html.twig
@@ -91,6 +91,6 @@
     </h2>
   {% endif %}
   {{ title_suffix }}
-  {{ content|without('field_secondary_content') }}
+  {{ content|without('field_lower_content') }}
 
 </article>
