--- a/modules/hdbt_content/templates/lower-content-block.html.twig
+++ b/modules/hdbt_content/templates/lower-content-block.html.twig
@@ -1,5 +1,5 @@
 {% if paragraphs %}
-  <div class="secondary-content layout-content">
+  <div class="lower-content layout-content">
     {% for paragraph in paragraphs %}
       {{ drupal_entity('paragraph', paragraph.target_id) }}
     {% endfor %}
