--- a/templates/layout/region--header-top.html.twig
+++ b/templates/layout/region--header-top.html.twig
@@ -14,6 +14,7 @@
 #}
 {% if content %}
   <div{{ attributes.addClass('header-top') }}>
+    <a href="https://hel.fi">Hel.fi</a>
     {{ content }}
   </div>
 {% endif %}
