--- a/src/scss/layout/_header-branding.scss
+++ b/src/scss/layout/_header-branding.scss
@@ -3,8 +3,13 @@
   background-color: $color-white;
   border-bottom: 1px solid $color-black-20;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   padding: 0 $spacing;
+
+  @include breakpoint($breakpoint-m) {
+    flex-wrap: nowrap;
+  }
 
   @include breakpoint($breakpoint-l) {
     padding: 0 $spacing-double;
