--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -23,7 +23,7 @@
 
 <div{{ create_attribute({'class': page_classes} ) }}>
   {% if page.header_top or page.header_bottom or page.header_branding %}
-    <header role="banner">
+    <header role="banner" class="header">
       {% if page.header_top %}
         {{ page.header_top }}
       {% endif %}
