--- a/src/scss/layout/_header-branding.scss
+++ b/src/scss/layout/_header-branding.scss
@@ -6,12 +6,33 @@
   flex-wrap: wrap;
   justify-content: space-between;
   padding: 0 $spacing;
+  position: fixed;
+  top: 0;
+  width: 100%;
 
   @include breakpoint($breakpoint-m) {
     flex-wrap: nowrap;
+    position: static;
+    top: auto;
   }
 
   @include breakpoint($breakpoint-l) {
     padding: 0 $spacing-double;
   }
+
+  &::before {
+    background-color: $color-white;
+    border-bottom: 1px solid $color-black-10;
+    content: "";
+    height: 65px; // Height of the mobile header
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+  }
+}
+
+.toolbar-fixed.toolbar-vertical .header-branding {
+  top: 39px; // Height of the toolbar
 }
