--- a/src/scss/layout/_header-branding.scss
+++ b/src/scss/layout/_header-branding.scss
@@ -30,6 +30,10 @@
     top: 0;
     width: 100%;
     z-index: 1;
+
+    @include breakpoint($breakpoint-m) {
+      display: none;
+    }
   }
 }
 
