--- a/templates/layout/region--header-branding.html.twig
+++ b/templates/layout/region--header-branding.html.twig
@@ -13,7 +13,7 @@
  */
 #}
 {% if content %}
-  <div{{ attributes.addClass('header-branding') }}>
+  <div{{ attributes.addClass('header-branding').setAttribute('id', 'header-branding') }}>
     {{ content }}
   </div>
 {% endif %}
