--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -48,12 +48,17 @@
       <li{{ item.attributes.addClass(item_classes) }}>
         <span class="menu__link-wrapper">
           {% if not item.is_nolink %}
-            {% set title_with_icon %}
-              {%- set icon = (item.url.getOption('attributes')).class[0] -%}
-              {% include '@hdbt/misc/icon.twig' with {icon: icon, icons_path: icons_path} %}
-              {{ item.title }}
-            {% endset %}
-            {{ link(title_with_icon, item.url) }}
+            {% set item_title = item.title %}
+
+            {%- set icon_name = (item.url.getOption('attributes')).icon -%}
+            {% if icon_name %}
+              {% set item_title %}
+                {% include '@hdbt/misc/icon.twig' with {icon: icon_name, icons_path: icons_path} %}
+                {{ item.title }}
+              {% endset %}
+            {% endif %}
+
+            {{ link(item_title, item.url) }}
           {% else %}
             <span{{ create_attribute({'class': item_classes} ) }}>{{ item.title }}</span>
           {% endif %}
