--- a/src/scss/components/navigation/_language-switcher.scss
+++ b/src/scss/components/navigation/_language-switcher.scss
@@ -8,6 +8,10 @@
     margin: 0 $spacing-half;
     text-decoration: underline;
 
+    &:first-child {
+      margin-left: 0;
+    }
+
     &.is-active {
       cursor: default;
       font-weight: $font-weight-bold;
