--- a/src/scss/layout/_header-branding.scss
+++ b/src/scss/layout/_header-branding.scss
@@ -37,6 +37,6 @@
   }
 }
 
-.toolbar-fixed.toolbar-vertical .header-branding {
+.toolbar-vertical .header-branding {
   top: 39px; // Height of the toolbar
 }
