--- a/src/scss/components/navigation/_branding-navigation.scss
+++ b/src/scss/components/navigation/_branding-navigation.scss
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     margin: 0 $spacing-half;
+    text-align: center;
     text-decoration: none;
 
     .icon {
