UHF-258: Added theme hook suggestions for menus.

--- a/templates/block/block--mobile-navigation.html.twig
+++ b/templates/block/block--mobile-navigation.html.twig
@@ -31,11 +31,12 @@
  * http://www.w3.org/TR/WCAG-TECHS/H42.html for more information.
  */
 #}
-{% set heading_id = attributes.id ~ '-menu'|clean_id %}
-<a id="burger" href="#mainmenu">Menu</a>
+{% set attributes = attributes.addClass('block--mobile-navigation') %}
 
-<nav role="navigation" aria-labelledby="{{ heading_id }}"{{ attributes|without('role', 'aria-labelledby') }} class="mobile-menu">
-  {# Menu. #}
+<a id="menu-hamburger" class="mobile-navigation__trigger" href="#mobile-navigation">
+  {% include '@hdbt/misc/icon.twig' with {icon: 'menu-hamburger', label: 'Open mobile navigation'|t} %}
+</a>
+<nav role="navigation" aria-labelledby="{{ heading_id }}"{{ attributes|without('role', 'aria-labelledby').setAttribute('id','mobile-navigation') }} class="mobile-navigation">
   {% block content %}
     {{ content }}
   {% endblock %}
