--- a/templates/block/block--main-navigation-level-2.html.twig
+++ b/templates/block/block--main-navigation-level-2.html.twig
@@ -32,8 +32,8 @@
  */
 #}
 {% set heading_id = attributes.id ~ '-menu'|clean_id %}
-<nav role="navigation" aria-labelledby="{{ heading_id }}"{{ attributes|without('role', 'aria-labelledby') }} class="sidebar-menu">
-  <h3{{ title_attributes.setAttribute('id', heading_id) }} class="sidebar-menu__title">
+<nav role="navigation" aria-labelledby="{{ heading_id }}"{{ attributes|without('role', 'aria-labelledby') }} class="sidebar-navigation">
+  <h3{{ title_attributes.setAttribute('id', heading_id) }} class="sidebar-navigation__title">
     {{ link(menu_link_parent.title, menu_link_parent.url) }}
   </h3>
 
