--- a/templates/navigation/menu--mobile.html.twig
+++ b/templates/navigation/menu--mobile.html.twig
@@ -29,7 +29,10 @@
 {% macro menu_links(items, attributes, menu_level, icons_path) %}
   {% import _self as menus %}
 
-  {% set menu_classes = ['menu'] %}
+  {% set menu_classes = [
+    'menu',
+    'menu--mobile'
+  ] %}
 
   {% if items %}
     <ul{{ attributes.addClass(menu_classes).setAttribute('id', 'menu--level-' ~ menu_level) }}>
