--- a/src/scss/components/navigation/_local-tasks.scss
+++ b/src/scss/components/navigation/_local-tasks.scss
@@ -38,12 +38,28 @@
     display: flex;
     height: 100%;
     padding: $spacing-quarter;
+    position: relative;
     text-decoration: none;
+
+    &::after {
+      background-color: $color-black;
+      bottom: 0;
+      content: "";
+      height: 0;
+      left: 0;
+      margin: 0 auto;
+      position: absolute;
+      right: 0;
+      transition: all .5s cubic-bezier(.19,1,.22,1);
+      width: 0;
+    }
 
     &.is-active,
     &:hover {
-      border-bottom: 4px solid $color-black-90;
-      padding-bottom: 0;
+      &::after {
+        height: 4px;
+        width: 100%;
+      }
     }
 
     &:focus {
