UHF-157: Fix multiple errors and logic mistakes in the toggle functionalities

--- a/src/scss/components/navigation/_header-bottom-navigation.scss
+++ b/src/scss/components/navigation/_header-bottom-navigation.scss
@@ -68,7 +68,7 @@
   }
 
   .menu__item--hover ,
-  .menu__item--collapsed {
+  .menu__item--open {
     position: relative;
 
     .menu__toggle-button .icon {
