--- a/templates/block/block--brandingnavigation.html.twig
+++ b/templates/block/block--brandingnavigation.html.twig
@@ -37,8 +37,8 @@
   {% block content %}
     {{ content }}
   {% endblock %}
-  <a id="menu-hamburger" class="mobile-navigation__trigger" href="#mobile-navigation">
-    {% include '@hdbt/misc/icon.twig' with {icon: 'menu-hamburger', label: 'Open navigation'|t} %}
+  <a id="menu-hamburger" class="mobile-navigation__trigger" href="#mobile-navigation" aria-expanded="false">
+    <span class="icon"></span>
     {{ 'Menu'|t }}
   </a>
 </div>
