--- a/templates/navigation/menu--mobile.html.twig
+++ b/templates/navigation/menu--mobile.html.twig
@@ -31,46 +31,38 @@
 
   {% set menu_classes = [
     'menu',
-    'menu--mobile'
+    'menu--mobile',
   ] %}
 
   {% if items %}
-    <ul{{ attributes.addClass(menu_classes).setAttribute('id', 'menu--level-' ~ menu_level) }}>
+    <ul{{ attributes.addClass(menu_classes) }}>
     {% for item in items %}
-
+      {% set level = menu_level + 1 %}
       {% set item_classes = [
         'menu__item',
         item.is_nolink ? 'menu__item--nolink',
         item.is_external ? 'menu__item--external',
         item.is_expanded or item.in_active_trail ? 'menu__item--children',
-        item.is_expanded and not item.in_active_trail ? 'menu__item--collapsed',
-        item.in_active_trail ? 'menu__item--expanded'
+        item.in_active_trail ? 'menu__item--active-trail',
+        'menu__item--level-' ~ level,
       ]%}
 
       <li{{ item.attributes.addClass(item_classes) }}>
-        <span class="menu__link-wrapper">
-          {% if not item.is_nolink %}
-            {% set item_title = item.title %}
+        {% if not item.is_nolink %}
+          {% set item_title = item.title %}
 
-            {%- set icon_name = (item.url.getOption('attributes')).icon -%}
-            {% if icon_name %}
-              {% set item_title %}
-                {% include '@hdbt/misc/icon.twig' with {icon: icon_name, icons_path: icons_path} %}
-                {{ item.title }}
-              {% endset %}
-            {% endif %}
-
-            {{ link(item_title, item.url) }}
-          {% else %}
-            <span{{ create_attribute({'class': item_classes} ) }}>{{ item.title }}</span>
+          {%- set icon_name = (item.url.getOption('attributes')).icon -%}
+          {% if icon_name %}
+            {% set item_title %}
+              {% include '@hdbt/misc/icon.twig' with {icon: icon_name, icons_path: icons_path} %}
+              {{ item.title }}
+            {% endset %}
           {% endif %}
 
-          {% if item.is_collapsed or item.is_expanded %}
-            <button type="button" aria-expanded="true" aria-controls="menu--level-{{ menu_level + 1 }}" class="menu__toggle-button">
-              {% include '@hdbt/misc/icon.twig' with {icon: 'angle-up', icons_path: icons_path} %}
-            </button>
-          {% endif %}
-        </span>
+          {{ link(item_title, item.url) }}
+        {% else %}
+          <span{{ create_attribute({'class': item_classes} ) }}>{{ item.title }}</span>
+        {% endif %}
         {% if item.below %}
           {{ menus.menu_links(item.below, attributes, menu_level + 1, icons_path) }}
         {% endif %}
