--- a/templates/block/block--mobile-navigation.html.twig
+++ b/templates/block/block--mobile-navigation.html.twig
@@ -38,3 +38,6 @@
     {{ content }}
   {% endblock %}
 </nav>
+<div id="mobile-navigation-footer-template">
+  {% include '@hdbt/misc/koro.twig' with {koro: koro, flip: false } %}
+</div>
