--- a/templates/layout/region--header-branding.html.twig
+++ b/templates/layout/region--header-branding.html.twig
@@ -15,5 +15,9 @@
 {% if content %}
   <div{{ attributes.addClass('header-branding').setAttribute('id', 'header-branding') }}>
     {{ content }}
+    <a id="menu-hamburger" class="mobile-navigation__trigger" href="#mobile-navigation" aria-expanded="false">
+      <span class="icon"></span>
+      {{ 'Menu'|t }}
+    </a>
   </div>
 {% endif %}
