UHF-1673: Fix centered banner icon position

--- a/src/scss/components/paragraphs/_banner.scss
+++ b/src/scss/components/paragraphs/_banner.scss
@@ -51,6 +51,12 @@
   .banner__container {
     max-width: $content-width-max;
   }
+
+  .banner__icon {
+    @include breakpoint($breakpoint-m) {
+      margin-right: $spacing;
+    }
+  }
 }
 
 .banner--design-align-left {
