UHF-1673: Finalize changes for mobile menu styles, add fixes for mmenu-config javascript

--- a/src/scss/components/icons/_logo.scss
+++ b/src/scss/components/icons/_logo.scss
@@ -1,6 +1,7 @@
 .logo {
   align-items: center;
   display: flex;
+  text-decoration: none;
 
   .icon--logo-sv,
   .icon--logo-ru {
@@ -18,7 +19,8 @@
 
     @include breakpoint($breakpoint-m) {
       height: 54px;
-      width: 117px;
+      max-width: 117px;
+      width: auto;
     }
   }
 }
