--- a/src/scss/components/navigation/_mobile-navigation.scss
+++ b/src/scss/components/navigation/_mobile-navigation.scss
@@ -196,11 +196,21 @@ $spacing-menu-item: 20px;
   align-items: center;
   display: flex;
   flex-direction: column;
-  margin: 0 $spacing-half;
+  height: 40px;
+  justify-content: center;
+  margin: 0 0 0 $spacing-half;
   order: 2;
   text-align: center;
   text-decoration: none;
+  width: 40px;
   z-index: 10;
+
+  @include breakpoint(440px) {
+    height: 60px;
+    padding-bottom: 15px; // To enable space for the icon label to be written under the icon we need this spacing.
+    position: relative;
+    width: 50px;
+  }
 
   &:hover {
     cursor: pointer;
@@ -214,17 +224,40 @@ $spacing-menu-item: 20px;
     display: none;
   }
 
+  .mobile-navigation__trigger__text {
+    display: none;
+
+    @include breakpoint(440px) {
+      align-items: center;
+      bottom: 0;
+      display: flex;
+      height: 28px; // Enough space for the text to go to two lines.
+      justify-content: center;
+      left: 0;
+      line-height: 13px; // If the text goes on two lines this still looks good.
+      position: absolute;
+      width: 100%;
+    }
+
+    @include breakpoint($breakpoint-m) {
+      bottom: -5px; // There is now a bit more space for the text so give a bit more space between the text and icon.
+    }
+  }
+
   .icon {
     background-color: $color-black;
     background-size: contain;
     content: "";
     display: flex;
-    margin-bottom: $spacing-half;
     mask-image: url('../icons/hds/ui/menu-hamburger.svg');
     mask-position: center;
     mask-repeat: no-repeat;
     mask-size: 25px;
     width: 20px;
+
+    @include breakpoint(440px) {
+      margin-bottom: $spacing-quarter;
+    }
   }
 
   &[aria-expanded="true"] .icon {
