--- a/templates/layout/region--header-branding.html.twig
+++ b/templates/layout/region--header-branding.html.twig
@@ -17,7 +17,7 @@
     {{ content }}
     <a id="menu-hamburger" class="mobile-navigation__trigger" href="#mobile-navigation" aria-expanded="false">
       <span class="icon"></span>
-      {{ 'Menu'|t }}
+      <span class="mobile-navigation__trigger__text">{{ 'Menu'|t }}</span>
     </a>
   </div>
 {% endif %}
