--- a/src/scss/components/block/_branding.scss
+++ b/src/scss/components/block/_branding.scss
@@ -3,21 +3,64 @@
   display: flex;
   height: 65px; // Height on mobile for the branding area.
   order: 1;
+  width: 136px;
   z-index: 1;
+
+  @include breakpoint(440px) {
+    // Width of the logo + margin + width of the site name + margin
+    width: calc(69px + #{$spacing-half} + 136px + #{$spacing-half});
+  }
 
   @include breakpoint($breakpoint-m) {
     height: auto;
   }
 
+  .logo--header {
+    transition: .15s ease-in-out;
+  }
+
   .site-name {
     color: $color-black;
     margin: 0 $spacing-half;
-    max-width: 136px; // This is decided by the design.
+    width: 136px;
+
+    @include breakpoint(max-width 440px) {
+      margin: 0;
+      opacity: 0;
+      pointer-events: none;
+      position: absolute;
+      transform: translate3d(0, 150%, 0);
+      transition: .15s ease-in-out;
+      transition-property: none;
+    }
 
     @include breakpoint($breakpoint-m) {
       @include font-size(20px, 24px);
       margin: 0 $spacing;
-      max-width: 100%;
+      width: auto;
+    }
+  }
+}
+
+.mm-wrapper_opened {
+  .block--branding {
+    .logo--header .icon {
+      @include breakpoint(max-width 440px) {
+        opacity: 0;
+        pointer-events: none;
+        transform: translate3d(0, -150%, 0);
+      }
+    }
+
+    .site-name {
+      @include breakpoint(max-width 440px) {
+        opacity: 1;
+        pointer-events: auto;
+        transform: translateZ(0);
+        transition-duration: 225ms;
+        transition-property: opacity,transform;
+        transition-timing-function: ease-out;
+      }
     }
   }
 }
