--- a/templates/block/block--system-branding-block.html.twig
+++ b/templates/block/block--system-branding-block.html.twig
@@ -17,6 +17,8 @@
 {% set attributes = attributes.addClass('block--branding') %}
 
 {% block content %}
-  {% embed "@hdbt/misc/logo.twig" with {logo_position: 'header'} %}{% endembed %}
-  <span class="site-name">{{ site_name }}</span>
+  <a href="{{ path('<front>') }}" class="logo logo--header" title="{{ site_name }}" rel="home">
+    {% embed "@hdbt/misc/logo.twig" %}{% endembed %}
+    <span class="site-name">{{ site_name }}</span>
+  </a>
 {% endblock %}
