--- a/templates/layout/region--footer-bottom.html.twig
+++ b/templates/layout/region--footer-bottom.html.twig
@@ -16,7 +16,9 @@
   {% embed "@hdbt/misc/container.twig" with {container_element: 'footer-bottom'} %}
     {% block container_content %}
       <div{{ attributes.addClass(region|clean_class) }}>
-        {% embed "@hdbt/misc/logo.twig" with {logo_position: 'footer'} %}{% endembed %}
+        <a href="{{ path('<front>') }}" class="logo logo--footer" title="{{ site_name }}" rel="home">
+          {% embed "@hdbt/misc/logo.twig" %}{% endembed %}
+        </a>
         {{ content }}
       </div>
     {% endblock container_content %}
