UHF-1193: Themed map paragraph.

--- a/src/scss/components/paragraphs/_remote-video.scss
+++ b/src/scss/components/paragraphs/_remote-video.scss
@@ -2,7 +2,7 @@
   margin-top: $spacing-triple;
   position: relative;
 
-  @media screen and (min-width: $breakpoint-l) {
+  @include breakpoint($breakpoint-l) {
     margin-top: $spacing-quadruple;
   }
 
