--- a/src/scss/components/content/_unit.scss
+++ b/src/scss/components/content/_unit.scss
@@ -297,7 +297,20 @@
 
   &.accordion {
     .accordion-item__content {
-      span:not(.accordion-item__button) {
+      h3 {
+        margin-top: 0;
+
+        &:not(:first-of-type) {
+          padding-top: $spacing-double;
+        }
+      }
+
+      ul {
+        margin: 0;
+        padding: 0;
+      }
+
+      li {
         display: list-item;
         margin-left: $spacing-and-half;
         margin-top: $spacing;
